syntax = "proto3";

option csharp_namespace = "ZodiacClient";

package zodiac;

import "google/protobuf/timestamp.proto";

service Zodiac {
  rpc FindZodiac (ZodiacRequest) returns (ZodiacReply);
}

message ZodiacRequest {
  google.protobuf.Timestamp zodiacDate = 1;
}

message ZodiacReply {
  string zodiacName = 1;
}
